--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,3 @@
 <head>
-<link rel="shortcut icon" type="image/ico" href="favicon.ico">
+<link rel="shortcut icon" type="image/png" href="/favicon.png">
 </head>
