--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,3 @@
 <head>
-<link rel="shortcut icon" type="image/png" href="favicon.png">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
